<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mps_description</name>
  <version>0.1.0</version>
  <description>"Description of Festo MPS machines as used in the RoboCup Logistics League (RCLL)"</description>
  <maintainer email="saurabh.borse@alumni.fh-aachen.de">Saurabh Borse</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
