<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotino_simulation</name>
  <version>0.0.0</version>
  <description>"package to spawn webots simulation"</description>
  <maintainer email="saurabh.borse@alumni.fh-aachen.de">saurabh-borse</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>mps_description</depend>
  <depend>geometry_msgs</depend>
  <depend>webots_ros2_driver</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
